Src/Driver/PI_F701/include/piapi.h

typedef struct qerror
{
   int32 point;
   int32 error;
} QERROR, PIPTR *LPQERROR;
/* static struct qerrors */
typedef struct qerrors
{
   int32 syserror;         /*  current system errors  */
   int32 numbpterrs;       /*  number of individual point errors  */
   struct qerror *qerr;   /*  list of points in error  */
} QERRORS, PIPTR *LPQERRORS;
/*  exception reporting structure  08-JUN-93 */
typedef struct
{
   float  newval;
   int32   newstat;
   int32   newtime;
   float  oldval;
   int32   oldstat;
   int32   oldtime;
   float  prevval;
   int32   prevstat;
   int32   prevtime;
   float  excdeveng;
   int32   excmin;
   int32   excmax;
} PI_EXCEPT;
PIINT32 piar_summary( int32 pt, int32 PIPTR *time1, int32 PIPTR *time2,
   float PIPTR *rval, float PIPTR *pctgood, int32 code );
PIINT32 piar_value( int32 pt, int32 PIPTR *timedate, int32 mode,
   float PIPTR *rval, int32 *istat );
PIINT32 piel_evntactn( int32 PIPTR *time, int32 PIPTR *number,
              int32 PIPTR *group, int32 *type, int32 len, char *msg, int32 action, int32 timeout );
PIINT32 pilg_formputlog( const char PIPTR *msg, const char PIPTR *idstring);
PIINT32 pilg_putoutput( char PIPTR *msg, int32 flags );
PIINT32 pipt_updates( int32 PIPTR *pt, char PIPTR *tagname, int32 len,
             int32 PIPTR *mode );
PIINT32 pisn_sendexcepstrucq ( int32 pt, char type, PI_EXCEPT PIPTR *excpt,
             int32 PIPTR *count, pibool queueing, int32 PIPTR *numbpterrs,
             QERROR PIPTR *qerrs );
PIINT32 piut_fastserverversion (int32 PIPTR *minorver, char PIPTR *buildid,
                                int32 buildlen );
char PIPTR * PIPROC piut_getloginuser( void );
PIINT32 piut_getserverversion(int32 PIPTR *nodeid,
   char PIPTR *servername, int32 servernamelen,
   char PIPTR *version, int32 versionlen, char PIPTR *buildid, int32 buildidlen);
PIINT32 piut_login( const char PIPTR *, const char PIPTR *, int32 PIPTR * );
/* general API defines */

/* piar_summary defines */
#define ARCTOTAL        0
#define ARCMINIMUM      1
#define ARCMAXIMUM      2
#define ARCSTDEV        3
#define ARCRANGE        4
#define ARCAVERAGE      5
#define ARCMEAN         6
/* piar_value defines */
#define ARCVALUEBEFORE  1
#define ARCVALUEAFTER   2
#define ARCVALUEINTERP  3
#define ARCVALUECODE    4
/* pilg_putoutput defines */
#define MSGLOG          0x1
#define STDOUTPUT       0x2
/* pipt_updates defines */
#define NOTAGS          0
#define POINTCREATE     1
#define POINTEDIT       2
#define POINTDELETE     3
/* piel_envtact defines */
#define ELEQSEARCH      1
#define ELGESEARCH      2
#define ELLESEARCH      3
#define ELGTSEARCH      4
#define ELLTSEARCH      5
#define ELEDIT          6       /* NOT SUPPORTED */
#define ELDELETE        7       /* NOT SUPPORTED */
/* piut_login defines  17MAY93 */
#define PILOGINOK      0x0001
#define PIREADACCESS   0x0002
#define PIWRITEACCESS  0x0004
#define PILOGINREAD    0x0008
#define PILOGINWRITE   0x0010
#define PILOGINPIUSER  0x0100
#define PILOGINVMS     0x0200
#define PILOGINUNIX    0x0400
#define PINO           0
#define PIREAD         1
#define PIREADWRITE    2