Src/Driver/PI_F701/include/piapix.h

#define GETFIRST (0)
#define GETNEXT  (1)
#define GETSAME  (2)
#define PI_NOMOREVALUES (100)
#define PI_M_AFLAG ((int16)0x0001)
#define PI_M_QFLAG ((int16)0x0002)
#define PI_M_SFLAG ((int16)0x0004)
/* piar_putarcvaluesx defines */
#define ARCNOREPLACE 3     /* add unless event(s) exist at same time (PI 2.x) */
#define ARCAPPEND    4     /* add event regardless of existing events; this will create 
#define ARCREPLACEX  6     /* replace existing event (fail if no event at time) */
#define ARCDELETE    7     /* remove existing event */
#define ARCAPPENDX   8     /* add event regardless of existing events, no compression; 
/*=== PI-API-X Definitions ============================================================*/
typedef struct _PITIMESTAMP {
   int32 month;    /* 1-12 */
   int32 year;     /* four digit */
   int32 day;      /* 1-31 */
   int32 hour;     /* 0-23 */
   int32 minute;   /* 0-59 */
   int32 tzinfo;   /* timezone information */
   double second; /* 0-59.99999999.... */
} PITIMESTAMP;
/*=======================================================================================
NOTE: this PIvaluetype typedef must be kept current with the definition in PIVALUE.HXX
=======================================================================================*/
typedef enum _PIvaluetype {
   PI_Type_null = 0,
   PI_Type_bool,
   PI_Type_uint8,
   PI_Type_int8,
   PI_Type_char,
   PI_Type_uint16,
   PI_Type_int16,
   PI_Type_uint32,
   PI_Type_int32,
   PI_Type_uint64,
   PI_Type_int64,
   PI_Type_float16,
   PI_Type_float32,
   PI_Type_float64,
   PI_Type_PI2,
   PI_Type_digital = 101,
   PI_Type_blob,
   PI_Type_PItimestamp = 104,
   PI_Type_PIstring,
   PI_Type_bad = 255
} PIvaluetype;
int32 PIPROC piar_putarcvaluesx(int32 count, int32 mode, int32 PIPTR *ptnum,
   float64 PIPTR *rval, int32 PIPTR *ival, void PIPTR **bval, uint32 PIPTR *bsize,
   int32 PIPTR *istat, int16 PIPTR *flags, PITIMESTAMP PIPTR *timestamp,
   int32 PIPTR *errors);
int32 PIPROC pitm_isdst(PITIMESTAMP PIPTR *timestamp);
void PIPROC pitm_setdst(PITIMESTAMP PIPTR *timestamp, int32 tm_isdst);
int32 PIPROC piut_errormsg(int32 stat, TCHAR PIPTR *msg, size_t PIPTR *msglen);
int32 PIPROC piut_strerror(int32 stat, TCHAR PIPTR *msg, size_t PIPTR *msglen,
                           const TCHAR PIPTR *filter);