Src/Driver/PI_F701/include/pilogex.h

#define MAX_POINT_NUM_LEN 16
#define MAX_TAGNAME_LEN 256
#define MAX_NODENAME_LEN 30
#define MAX_USERNAME_LEN 30
// PI Server Types
#define PILOGIN_SERVER_TYPE_PI 1000
/***********************Global  definitions*****************/

typedef struct _taglist
{
   char m_szServer [MAX_NODENAME_LEN];
   int32 m_lNodeId; 
   char m_szTagName[MAX_TAGNAME_LEN];
   int32 m_lPoint;
   struct _taglist PIPTR* m_next;
} TAGLIST, *PTAGLIST, PIPTR* LPTAGLIST;
typedef struct _PiHelpIdList
{
   PIOBJID m_oidDlgId;
   int32 m_lHelpId;
   struct _PiHelpIdList PIPTR* m_next;
} PIHELPIDLIST, *PPIHELPIDLIST, PIPTR* LPPIHELPIDLIST;
EXPORTPIINT32
pilg_login
   (
   HWND hWndParent, // Application's parent window handle 
   LPCSTR lpszUserName, // user name 
   LPCSTR lpszNode, // node name
   LPCSTR lpszPassword,
   int32 PIPTR* valid
   );
/***************************************************************/
// pilg_getservername - gets server name given nodeId
///////////////////////////////////////////////////////////////
// codes returned by the pilg_getservername
// SUCCESS: 
// ERR_INVALID_NODE_ID if server not found;  lpszServerName = ""
// ERR_TASK_PI_NOT_REGISTERED -103
///////////////////////////////////////////////////////////////
EXPORTPIINT32
pilg_getservername
   (
   int32 lNodeId, // node id 
   char PIPTR* lpszServerName, // server name buffer
   int32 PIPTR* plBufSize  // size of the buffer  in/out
   );
EXPORTPIINT32
pilg_pointattdlg
   (
   HWND hParentWnd, // parent window handle
   LPTAGLIST lptglstHead // head to the tag list
   );
/**************************************************************/
// pilg_getconnectedserver - gets all the connected servers  
// on GETFIRST/GETNEXT basis
////////////////////////////////////////////////////////////////////
// the info for the server is returned into
// lpszServerNameBuf, // server name buffer
// plBufSize, // buffer size - in/out
// plNodeId, // node id 
// plPort,   // port number
//
//
// Return codes:
// ERR_TASK_PI_NOT_REGISTERED -103,
// ERR_NO_MORE 1,
// ERR_GET_FIRST_NOT_ISSUED -1
// SUCCESS 0 if everything is OK
///////////////////////////////////////////////////////////////
EXPORTPIINT32
pilg_getconnectedserver
   (
   char PIPTR* lpszServerNameBuf, // server name buffer
   int32 PIPTR* plBufSize, // buffer size - in/out
   int32 PIPTR* plNodeId, // node id 
   int32 PIPTR* plPort,   // port number
   int32  lSeq  // sequence GETFIRST, GETNEXT
   );
EXPORTPIINT32
pilg_getselectedtag
   (
   LPTAGLIST lpcTagList, // tag list structure
   int32 lSeq  // sequence GETFIRST/GETNEXT
   );
/**************************************************************/
// pilg_addnewserver - Adds a new server  
////////////////////////////////////////////////////////////////////
//   char PIPTR* lpszServerName,      // server name
//   UINT nServerType,          // Server Type
//   char PIPTR* lpszUserName,        // User name 
//   int32 lPortNum           // Port number for socket connection 
//
//
// Return codes:
// FALSE, Add Failed
// long node ID if everything went OK
///////////////////////////////////////////////////////////////
EXPORTLONG
pilg_addnewserver
   (
   char PIPTR* lpszServerName,        // server name
   UINT nServerType,            // Server Type
   char PIPTR* lpszUserName,          // User name 
   int32 lPortNum             // Port number for socket connection 
   );
/**********************************************************************/
// pilg_getdefserverinfo - gets default server info
////////////////////////////////////////////////////////////////////
// return  codes:  SUCCESS or
// ERR_TASK_PI_NOT_REGISTERED -103
// the total length of the server name is returned in
// *plBufSize.
/////////////////////////////////////////////////////////////////////
EXPORTPIINT32
pilg_getdefserverinfo
   ( 
   char PIPTR* lpszServerNameBuf, // server name buffer
   int32 PIPTR* plBufSize,  // size of the buffer - in/out
   int32 PIPTR* plNodeId, // pointer to node id
   int32 PIPTR* plPort // pointer to port number
   );
/**********************************************************************/
// pilg_getnodeid - gets the nodeid of the specified server
//    
// Returns: SUCCESS 0 
//          ERR_INVALID_SERVER -6
//       or ERR_TASK_PI_NOT_REGISTERED -103,
// the node id is returned in *plNodeId,
// if server not found *plNodeId = 0
////////////////////////////////////////////////////////////////////////
EXPORTPIINT32
pilg_getnodeid( 
   LPCSTR lpszServerName, // server name
   int32* plNodeId // pointer to node id 
   );
/**********************************************************************/
// pilg_setservernode - sets the server context 
////////////////////////////////////////////////////////////////////
// codes returned by pilg_setservernode:
// return code of the piut_setservernode
// ERR_TASK_PI_NOT_REGISTERED -103
/////////////////////////////////////////////////////////////////////
EXPORTPIINT32
pilg_setservernode
   ( 
   LPCSTR lpszServerName // server name 
   );
EXPORTPIINT32
pilg_connectdlg
   (
   HWND hWndParent // parent window handle
   ); // call connections dialog
EXPORTPIINT32
pilg_tagsearchdlg
   (
   HWND hWndParent // parent window handle
   ); // call connections dialog 
/**********************************************************************/
// pilg_disconnect - disconnects the curent task from the servers
//////////////////////////////////////////////////////////////////
// codes returned by pilg_disconnect
// the return code of piut_disconnect or
// ERR_TASK_PI_NOT_REGISTERED -103,
// ERR_PI_DISCONNECT_INVALID_DLL -1
//////////////////////////////////////////////////////////////////
EXPORTPIINT32 pilg_disconnect();
// const CString cstrPiDisconnect = "PILG_DISCONNECT";
/**********************************************************************/
// pilg_disconnectnode - disconnects curent task from a server
//////////////////////////////////////////////////////////////////
// codes returned by pilg_disconnectnode
// the return code of piut_disconnectnode or
// ERR_TASK_PI_NOT_REGISTERED -103,
// ERR_PI_DISCONNECT_INVALID_DLL -1
//////////////////////////////////////////////////////////////////
EXPORTPIINT32
pilg_disconnectnode
   (
   LPCSTR szServerName
   );
// const CString cstrPiDisconnectNode = "PILG_DISCONNECTNODE"; 
    
/**********************************************************************/
// pilg_registerapp - registers the application, without registration
// the appliation does not have access to any of the services provided
// by the current DLL
//////////////////////////////////////////////////////////////////
// codes returned by pilg_registerapp:
// the instsance handle of the loaded DLL or
// ERR_NOT_ENOUGH_MEMORY  0 
// ERR_DLL_LOADED  22
// ERR_PI_REGISTER_INVALID_DLL 23
//////////////////////////////////////////////////////////////////
EXPORTHINSTANCE
pilg_registerapp
   (
   LPCSTR lpszDLLName // PI DLL Name
   );
/**********************************************************************/
// pilg_unregisterapp - unregisters the application, cleans it up
// from the internal task login data base

EXPORTVOID pilg_unregisterapp();
EXPORTPIINT32
pilg_registerhelp
   (
   LPCSTR lpszHelpFile, // name for the help file
   LPPIHELPIDLIST lplstHelpId // pointer to help id list
   );