Src/Driver/PI_F701/include/piapi32.bas

Attribute VB_Name = "Module1"
' $Archive: /PI/clients/piapi/piapi32.bas $
'Copyright (c) 1993-98 OSI Software, Inc. All rights reserved.
'Unpublished - rights reserved under the copyright law of the United States.
'
'USE OF A COPYRIGHT NOTICE IS PRECAUTIONARY ONLY AND DOES NOT IMPLY PUBLICATION
'OR DISCLOSURE.
'
'THIS SOFTWARE CONTAINS CONFIDENTIAL INFORMATION AND TRADE SECRETS OF
'OSI SOFTWARE, INC.  USE, DISCLOSURE, OR REPRODUCTION IS PROHIBITED WITHOUT
'THE PRIOR EXPRESS WRITTEN PERMISSION OF OSI SOFTWARE, INC.
'
'RESTRICTED RIGHTS LEGEND
'Use, duplication, or disclosure by the Government is subject to restrictions
'as set forth in subparagraph (c)(1)(ii) of the Rights in Technical Data and
'Computer Software clause at DFARS 252.227.7013
'
'OSI Software, Inc.
'777 Davis Street, Suite 250, San Leandro CA 94577
'
' $Log: /PI/clients/piapi/piapi32.bas $
' 
' 17    2/26/03 9:31a Matzen
' Added function prototype for get_utctime
' 
' 16    2/19/03 2:48p Matzen
' The prototype for piut_getloginuser was changed to return a long
' instead of a string.  Although visual basic strings can be returned as
' parameters in function calls (as long as they are declared as Byval
' String), visual basic strings cannot directly be returned by a function
' writen in C or C++ unless the C or C++ function returns a BSTR.   Once
' must treat function returns of char*  as long in visual basic and then
' manipulate the long using win32 calls.  See clientele call 52201GMBH.
'
' 15    4/16/02 11:34a Harry
' Changed case of PITime in method definitions.  Screws up VB projects
' that include it and want to use PISDK PITime.
Rem
Rem 14    8/10/99 2:27p Cahenze
Rem Added piut_getloginuser
Rem
Rem 13    7/27/99 5:29p Cahenze
Rem drVals were #, not Any.
Rem
Rem 12    5/13/99 11:19a Cahenze
Rem Added piut_strerror
Rem
Rem 11    4/28/99 8:08a Charlie
Rem Added archive retrieval flags which were missing.  Added missing $ type
Rem in pilg_addnewserver.  Removed Byval declaration in piut_errormsg for
Rem msglen.
Rem
Rem 10    2/15/99 5:45p Charlie
Rem pisn_evmexceptx: first argument changed to byref.
Rem
Rem 9     2/08/99 1:09p Charlie
Rem Added pilg_checklog, pilg_formputlog, pisn_evmexceptx,
Rem pisn_sendexcepstrucq, piut_fastserverversion.
Rem
Rem 8     12/03/98 5:07p Charlie
Rem Removed unusable PIvaluetypes.  Modified PITIMESTAMP.reserved to
Rem PITIMESTAMP.tzinfo.  Added piar_putarcvaluesx and mode definitions,
Rem pitm_isdst, pitm_setdst and piut_getserverversion.
Rem
Rem 7     5/15/98 11:35a Harry
Rem Removed line
Rem Attribute VB_Name = "Module1"
Rem Conflicted with other modules when loading into VB projects and not
Rem required.  Leaving it out causes the module to take the next available
Rem name.
Rem
Rem 6     4/30/98 10:19a Charlie
Rem
Rem 4     10/29/97 7:45a Harry
Rem Added defined constants for extended API, GETSAME, PI_NOMOREVALUES, and
Rem BITFLAGS
'
' History
' 11/22/96 hs  Added and fixed extended api declarations and types
Option Explicit

'------------------------------- piar_summary definitions
Global Const ARCTOTAL = 0
Global Const ARCMINIMUM = 1
Global Const ARCMAXIMUM = 2
Global Const ARCSTDEV = 3
Global Const ARCRANGE = 4
Global Const ARCAVERAGE = 5
Global Const ARCMEAN = 6

'------------------------------- piar_value definitions
Global Const ARCVALUEBEFORE = 1
Global Const ARCVALUEAFTER = 2
Global Const ARCVALUEINTERP = 3
Global Const ARCVALUECODE = 4

'------------------------------- piel_evntactn definitions
Global Const ELEQSEARCH = 1
Global Const ELGESEARCH = 2
Global Const ELLESEARCH = 3
Global Const ELGTSEARCH = 4
Global Const ELLTSEARCH = 5
Global Const ELEDIT = 6
Global Const ELDELETE = 7

'------------------------------- pilg_putoutput definitions
Global Const MSGLOG = 1
Global Const STDOUTPUT = 2

'------------------------------- pipt_updates definitions
Global Const NOTAGS = 0
Global Const POINTCREATE = 1
Global Const POINTEDIT = 2
Global Const POINTDELETE = 3

'------------------------------- piut_login definitions
Global Const PILOGINOK = 1
Global Const PIREADACCESS = 2
Global Const PIWRITEACCESS = 4
Global Const PILOGINREAD = 8
Global Const PILOGINWRITE = 16
Global Const PILOGINPIUSER = 256
Global Const PILOGINVMS = 512
Global Const PILOGINUNIX = 1024
Global Const PINO = 0
Global Const PIREAD = 1
Global Const PIREADWRITE = 2
'-------------------------------- pilg definitions
Global Const GETFIRST = 0
Global Const GETNEXT = 1
Global Const GETSAME = 2
Global Const PI_NOMOREVALUES = 100
Global Const PI_M_AFLAG = 1
Global Const PI_M_QFLAG = 2
Global Const PI_M_SFLAG = 4
Global Const MAX_POINT_NUM_LEN = 16
Global Const MAX_NODENAME_LEN = 30
Global Const MAX_TAGNAME_LEN = 256
Global Const MAX_USERNAME_LEN = 30
Global Const PILOGIN_SERVER_TYPE_PI = 1000
'-------------------------------- extended API definitions
Global Const ARCflag_time = 4
Global Const ARCFLAG_EVEN = 8
Global Const ARCflag_filter = 16
Global Const ARCflag_mark = 32
Global Const ARCFLAG_COMP = 64

Global Const PI_Type_null = 0
Global Const PI_Type_bool = 1
Global Const PI_Type_uint8 = 2
Global Const PI_Type_int8 = 3
Global Const PI_Type_char = 4
Global Const PI_Type_uint16 = 5
Global Const PI_Type_int16 = 6
Global Const PI_Type_uint32 = 7
Global Const PI_Type_int32 = 8
Global Const PI_Type_uint64 = 9
Global Const PI_Type_int64 = 10
Global Const PI_Type_float16 = 11
Global Const PI_Type_float32 = 12
Global Const PI_Type_float64 = 13
Global Const PI_Type_PI2 = 14
Global Const PI_Type_digital = 101
Global Const PI_Type_blob = 102
Global Const PI_Type_PIstring = 105
Global Const PI_Type_bad = 255

' piar_putarcvaluesx defines
Global Const ARCNOREPLACE = 3   ' add unless event(s) exist at same time (PI 2.x)
Global Const ARCAPPEND = 4      ' add event regardless of existing events
Global Const ARCREPLACE = 5     '  add event, replace if event at same time
Global Const ARCREPLACEX = 6    '  replace existing event (fail if no event at time)
Global Const ARCDELETE = 7      '  remove existing event
Global Const ARCAPPENDX = 8     '  add event regardless of existing events, no compression

'---------------------------- Structure declarations
Type QERROR
   Point As Long
   piapierror As Long
End Type

Global Const MAXPI3PUTSNAP = 255 'For queue call return values.
Type QERRORS
   syserror As Long
   numpterrs As Long
   qerr(MAXPI3PUTSNAP) As QERROR
End Type

Type PI_EXCEPT
   NewVal As Single
   newstat As Long
   newTime As Long
   oldVal As Single
   oldstat As Long
   oldTime As Long
   prevVal As Single
   prevstat As Long
   prevTime As Long
   ExcDevEng As Single
   ExcMin As Long
   ExcMax As Long
End Type

Type PI_VAL
   bSize As Long
   iStat As Long
   Flags As Integer
End Type

Type TagList
   server As String * MAX_NODENAME_LEN
   NodeID As Long
   TagName As String * MAX_TAGNAME_LEN
   Point As Long
   reserved As Long
End Type

Type PITimeStamp
   Month As Long '    /* 1-12 */
   Year As Long    ' /* four digit */
   Day As Long    '      /* 1-31 */
   Hour As Long    ' /* 0-23 */
   Minute As Long  ' /* 0-59 */
   tzinfo As Long
   Second As Double ' /* 0-59.99999999.... */
End Type

'PI batch function declarations -- New with PI-API v1.1.0
Declare Function piba_getunit Lib "piapi32.dll" (ByVal unit$, ByVal slen&, ByVal index&, number&) As Long
Declare Function piba_getaliaswunit Lib "piapi32.dll" (ByVal unit$, ByVal balias$, ByVal slen&, ByVal index&, number&) As Long
Declare Function piba_getunitswalias Lib "piapi32.dll" (ByVal balias$, ByVal unit$, ByVal slen&, ByVal index&, number&) As Long
Declare Function piba_findaliaspoint Lib "piapi32.dll" (ByVal unit$, ByVal balias$, ptno&, ByVal TagName$, ByVal slen&) As Long
Declare Function piba_search Lib "piapi32.dll" (ByVal batchid$, ByVal blen&, ByVal unit$, ByVal ulen&, ByVal product$, ByVal plen&, stime&, etime&, ByVal sf&, ByVal timeout&) As Long

'PI Login Services function declarations -- new with PI-API v1.1.0
Declare Function pilg_addnewserver Lib "pilog32.dll" (ByVal ServerName$, ByVal servertype&, ByVal username$, ByVal portnum&) As Long
Declare Function pilg_connectdlg Lib "pilog32.dll" (ByVal hwndparent&) As Long
Declare Function pilg_disconnect Lib "pilog32.dll" () As Long
Declare Function pilg_disconnectnode Lib "pilog32.dll" (ByVal ServerName$) As Long
Declare Function pilg_getconnectedserver Lib "pilog32.dll" (ByVal servernamebuf$, bufsize&, NodeID&, port&, ByVal seq&) As Long
Declare Function pilg_getdefserverinfo Lib "pilog32.dll" (ByVal servernamebuf$, bufsize&, NodeID&, port&) As Long
Declare Function pilg_getnodeid Lib "pilog32.dll" (ByVal servernamebuf$, NodeID&) As Long
Declare Function pilg_getselectedtag Lib "pilog32.dll" (taglst As TagList, ByVal seq&) As Long
Declare Function pilg_getservername Lib "pilog32.dll" (ByVal NodeID&, ByVal servernamebuf$, bufsize&) As Long
Declare Function pilg_login Lib "pilog32.dll" (ByVal hwndparent&, ByVal username$, ByVal ServerName$, ByVal password$, valid&) As Long
Declare Function pilg_pointattdlg Lib "pilog32.dll" (ByVal hwndparent&, taglst As TagList) As Long
Declare Function pilg_registerapp Lib "pilog32.dll" (ByVal dllname$) As Long
' The function below requires allocating a linked list which is not supported in VB '
'Declare Function pilg_registerhelp Lib "pilog32.dll" (ByVal helpfile$, linklist&) As Long
Declare Function pilg_setservernode Lib "pilog32.dll" (ByVal ServerName$) As Long
Declare Function pilg_tagsearchdlg Lib "pilog32.dll" (ByVal hwndparent&) As Long
Declare Function pilg_unregisterapp Lib "pilog32.dll" () As Long

